--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,10 +7,10 @@ jobs:
     steps:
     - name: Update README
       id: github-contentful-readme
-      uses: Merlin04/github-contentful-readme@v0.0.3
+      uses: Merlin04/github-contentful-readme@v0.0.4
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        header: "github-header"
-        subhead: "github-subheader"
-        footer: "github-footer"
+        headerKey: "github-header"
+        subheaderKey: "github-subheader"
+        footerKey: "github-footer"
