--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,10 +7,12 @@ jobs:
     steps:
     - name: Update README
       id: github-contentful-readme
-      uses: Merlin04/github-contentful-readme@v0.0.4
+      uses: Merlin04/github-contentful-readme@v0.0.5
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         headerKey: "github-header"
         subheaderKey: "github-subheader"
         footerKey: "github-footer"
+        contentfulAccessToken: ${{ secrets.CONTENTFUL_ACCESS_TOKEN }}
+        contentfulSpaceId: ${{ secrets.CONTENTFUL_SPACE_ID }}
