Run action on timer

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,10 @@
-on: [push]
+on:
+  schedule:
+  - cron: "*/10 * * * *"
+  push:
+    branches:
+      - main 
+  workflow_dispatch:
 
 jobs:
   update_readme_job:
